Development
-----------
- fix pmount.allow parsing regular expression (it failed in some ISO locales)

0.9.11
------
- pmount: refuse to mount devices to a mount point that is already in
  /etc/fstab
- pmount-hal: Do not try mount non-fstab devices to fstab mountpoints
- update translations from Rosetta

0.9.10
------
- pmount-hal: fix parsing of hal's mount options
- pmount-hal: directly call mount for devices in /etc/fstab
- pmount-hal.1: document PMOUNT_DEBUG environment variable

0.9.9
-----
- mention MMC devices in pmount man page
- pmount-hal: fix crash for label-less volumes with hal 0.5.7
- pmount-hal: fix handling of empty labels with hal 0.5.7

0.9.8
-----
- Add reiser4 to the list of supported file systems.
- pmount-hal: fall back to plain volume.fstype and volume.label hal properties
  if policy does not exist; this makes pmount work with hal 0.5.7 and above
- pmount-hal: check for PMOUNT_DEBUG environment variable to enable debugging
- pmount: allow mounting of mmc cards
- updated translations from Rosetta

0.9.7
-----
- pmount: mount vfat with shortname=mixed option for better WinXP compatibility
- fix configure check to work with libsysfs versions 1.3 and 2.0
- pmount, pumount: do not link against dbus and hal libraries
- pmount, pumount: support --version argument
- pmount: automatically prepend /dev to device argument if it is missing

0.9.6
-----
- pmount-hal: support device argument
- pmount manpage: fix default mount options inconsistency
- pmount-hal: full support for HAL expored mount policy (including
  global and per-drive policy, and the "exec" option)
- autotoolized build system, thanks to Aaron Bockover
- pmount: fixed umask parsing, umask 000 works now
- pmount-hal: full support for storage devices to mount floppies and similar
  devices

0.9.5
-----
- pmount: Fix forgotten line break in debug output
- pmount: improve debugging of removability detection
- add README.devel with some VCS explanations